--- a/data/gigs.yaml
+++ b/data/gigs.yaml
@@ -1,3 +1,31 @@
 title: Nächste Gigs
 gigs:
-- name: hoi
+- name: Apatan Live
+  kind: Kultur am Adventsmarkt
+  date: 06. Dezember 2020
+  time: tbd
+  location: Rehetobel AR
+  description: Wir spielen weil wir es können.
+
+- name: Apatan Live
+  kind: Hochzeit
+  date:
+  time:
+  location:
+  description:
+  
+- name: Apatan Live
+  kind:
+  date:
+  time:
+  location:
+  description:
+  
+- name: Apatan Live
+  kind:
+  date:
+  time:
+  location:
+  description:
+  
+  
