--- a/data/gigs.yaml
+++ b/data/gigs.yaml
@@ -3,6 +3,15 @@ pastTitle: Vergangene Gigs
 description: Kommen Sie bei unserem nächsten Gig vorbei!
 gigs:
 - name: Apatan Live
+  kind: EP Plattentaufe
+  image: images/apatan/ApatanKulti.jpeg
+  date: 2020-12-12
+  time: Abend
+  location: OYA Club St. Gallen
+  description: Wir spielen weil wir es können.
+
+
+- name: Apatan Live
   kind: Kultur am Adventsmarkt
   image: images/apatan/ApatanKulti.jpeg
   date: 2020-12-06
