--- a/config.toml
+++ b/config.toml
@@ -48,6 +48,8 @@ summarylength = 25
     primary_button_url    = "#contact"
     secondary_button      = "Gigs"
     secondary_button_url  = "#gigs"
+    middle_button      = "In Contrast"
+    middle_button_url  = "#incontrast"
     arrowlink             = "#gigs"
 
   [params.about]
