--- a/data/gigs.yaml
+++ b/data/gigs.yaml
@@ -1,6 +1,6 @@
 title: Nächste Gigs
 pastTitle: Vergangene Gigs
-description: Kommen Sie bei unserem nächsten Gig vorbei!
+description: Kommen Sie bei unserem nächsten Gig vorbei!!
 gigs:
 - name: ABGESAGT :(
   kind: EP Plattentaufe
